- Update remote build to support static libs. - Fix bit_depth for 16 bit PNG. - Add ARM libraries and build scripts. - Rebuild native binaries (Android, IOS, MinGW and Linux/MacOS static libs).

--- a/Haru.Native/src/libharu/CHANGES
+++ b/Haru.Native/src/libharu/CHANGES
@@ -1,6 +1,9 @@
 libHaru news
 -------------------------------------------------------------------------------
 
+Version 2.4.0dev-gehtsoft-mods-v2 (8/26/2019)
+- Fix bit_depth for 16 bit PNG
+
 Version 2.4.0dev-gehtsoft-mods-v1 (6/20/2019)
 - Changed file structure, removed unnecessary files
 - Fix compression of PNG image's transparency mask
